--- a/jQuery/Practice.html
+++ b/jQuery/Practice.html
@@ -16,6 +16,8 @@
         $(document).ready(function() {
           $("button").addClass("animate__animated animate__bounce");
           $(".well").addClass("animate__animated animate__shakeX");
+          $("#target1").css("color", "red");
+
       
         });
       </script>
