--- a/jQuery/Practice.html
+++ b/jQuery/Practice.html
@@ -48,6 +48,9 @@
         //even positioned elements are targeted within the class
         $(".target:even").addClass("shake");
 
+        // access body and apply animated hinge class
+        $("body").addClass("animated hinge");
+
 
 
 
